# zmqNotifier

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  csv_logger.py  pyproject.toml  zmq_cli.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: config_uml.mmd  notifier_uml.mmd
docs/source/: conf.py  index.rst  overview.rst
mt4/: DWX_ZeroMQ_Server_v2.0.1_RC8.mq4
scripts/: benchmark_aggregation.py  redraw_uml.py  run_quality_checks.sh  test_telegram.py
src/: DWX_ZeroMQ_Connector_v2_0_1_RC8.py  __init__.py  config.py  models.py  zmq_cli.py  zmq_cli_test.py
src/zmqNotifier/: __init__.py  abstract_class.py  config.py  csv_logger.py  market_data.py  market_data_logger.py  models.py  notifier.py  segment_tree.py  sliding_windows.py  tick_agg.py  zmq_cli.py
src/zmqNotifier/notification/: __init__.py  backends.py
tests/: conftest.py  test_aggregation.py  test_config.py  test_data_logger.py  test_market_data.py  test_market_data_logger.py  test_models.py  test_notifier.py  test_slidingwindowMinMax.py  test_stdzip.py  test_telegram_notifier.py  test_zmq_cli.py
tests/fixtures/: __init__.py  mock_data.py
